Add profiler profile to exclude from build by default. Aspectj compiler can mess with modules